--- a/admin/sass/style.scss
+++ b/admin/sass/style.scss
@@ -69,3 +69,7 @@ input.jam-btn:hover, input.jam-btn:active, input.jam-btn:focus {
   background: -webkit-linear-gradient(-214deg, rgba(#0086aa, 0.8) 0%, rgba(#63fcff, 1) 100%);
   background: linear-gradient(-214deg, rgba(#0086aa, 0.8) 0%, rgba(#63fcff, 1) 100%);
 }
+
+.value-badge {
+  cursor: pointer;
+}
