--- a/admin/sass/style.scss
+++ b/admin/sass/style.scss
@@ -106,7 +106,7 @@ input.jam-btn:hover, input.jam-btn:active, input.jam-btn:focus {
 
 li.list-group-item {
   overflow: hidden;
-  text-overflow:ellipsis;
+  text-overflow: ellipsis;
   max-width: 114px;
 }
 
@@ -129,4 +129,8 @@ div.value-containers {
 
 #created-url {
   cursor: pointer;
+}
+
+#message {
+  margin: 15px;
 }
