--- a/admin/sass/style.scss
+++ b/admin/sass/style.scss
@@ -113,7 +113,7 @@ input.jam-btn:hover, input.jam-btn:active, input.jam-btn:focus {
 li.list-group-item {
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 114px;
+  width: 114px;
 }
 
 li.list-group-item:first-child {
