--- a/admin/sass/style.scss
+++ b/admin/sass/style.scss
@@ -28,14 +28,15 @@ $iphone-4-max: 480px;
 button.jam-btn,
 input.jam-btn,
 div.setting-area,
-#message {
+#message,
+span.glyphicon,
+span.glyphicon-refresh-animate {
   transition: all 0.3s ease-in-out;
 }
 
 span.glyphicon-refresh-animate {
-    -animation: spin .7s infinite linear;
     -webkit-animation: spin2 .7s infinite linear;
-    display: none;
+    -animation: spin .7s infinite linear;
 }
 
 @-webkit-keyframes spin2 {
@@ -150,5 +151,5 @@ div.value-containers {
 #message {
   margin: 15px;
   overflow: hidden;
-  display: none;
+  height: 45px;
 }
