--- a/admin/sass/style.scss
+++ b/admin/sass/style.scss
@@ -34,6 +34,11 @@ span.glyphicon-refresh-animate {
   transition: all 0.3s ease-in-out;
 }
 
+/* fix for admin side using bootstrap */
+#adv-settings legend {
+  border-bottom: none !important;
+}
+
 span.glyphicon-refresh-animate {
     -webkit-animation: spin2 .7s infinite linear;
     -animation: spin .7s infinite linear;
